--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+/* Combined @import statement for all  font families */
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Assistant:wght@200..800&family=Bebas+Neue&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Jost:wght@100;300;400;500;700;800;900&family=Montserrat:wght@100;300;400;500;700;800;900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:wght@300;400;600;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 :root {
@@ -141,3 +141,42 @@ a {
   line-height: 58.8px;
   text-align: left;
 }
+
+.sport324-head {
+    display: block;
+    height: 150px;
+    padding: 20px;
+    background-color: var(--side-bar-back);
+  }
+  
+  .sport324-head h2 {
+    margin-top: 10px;
+    margin-bottom: 15px;
+    display: block;
+    text-align: left;
+    font-family: "Inter", sans-serif;
+    font-size: 49px;
+    font-weight: 700;
+    line-height: 58.8px;
+  }
+  
+  .sport324-head span {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    gap: 6px;
+  }
+  
+  .sport324-head span p {
+    font-family: "Roboto";
+    font-size: 17.86px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    display: block;
+  }
+  
+  .sport324-head span svg {
+    height: 16px;
+    width: 16px;
+  }
