--- a/src/app/details/details.css
+++ b/src/app/details/details.css
@@ -64,3 +64,24 @@
   line-height: 22px;
   color: var(--secondary-white);
 }
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+ 
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
