--- a/src/app/profile/profile.css
+++ b/src/app/profile/profile.css
@@ -205,3 +205,31 @@
   line-height: 21px;
   text-align: left;
 }
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .profilepage {
+    padding: 10px 0;
+  }
+  .profile_page_flex {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
