--- a/src/app/virtual/virtual.css
+++ b/src/app/virtual/virtual.css
@@ -56,9 +56,33 @@
 }
 
 .lst_two {
-flex: 0.4 !important;
+  flex: 0.4 !important;
 }
 
 .lst_one {
-flex: 0.5 !important;
+  flex: 0.5 !important;
+}
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+ 
+ .lst_two {
+  flex: 0.25 !important;
+ }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
 }
