--- a/src/app/components/css/faq.css
+++ b/src/app/components/css/faq.css
@@ -81,3 +81,47 @@
   font-size: 14px;
   padding: 15px 20px;
 }
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .faq-hero {
+    width: 90%;
+    margin: auto;
+  }
+  .faq-hero h2 {
+    width: 100%;
+    margin: auto;
+  }
+  .faq-body {
+    width: 90%;
+    margin: auto;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+  .faq-hero {
+    width: 80%;
+    margin: auto;
+  }
+  .faq-hero h2 {
+    width: 100%;
+    margin: auto;
+  }
+  .faq-body {
+    width: 80%;
+    margin: auto;
+  }
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
