--- a/src/app/components/css/footer.css
+++ b/src/app/components/css/footer.css
@@ -97,3 +97,58 @@ footer {
   font-weight: 400;
   line-height: 25.5px;
 }
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .fots {
+    width: 100%;
+    height: fit-content;
+    padding: 2em 1em;
+  }
+  .fot {
+    padding: 4em 0.7em;
+  }
+  .fot-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+  .copyright {
+    left: 5%;
+    bottom: -50px;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+  .fots {
+    width: 100%;
+    height: 300px;
+    padding: 2em 1em;
+  }
+  .fot {
+    padding: 20px 15px;
+  }
+  .fot-content {
+    height: 100%;
+  }
+  .copyright {
+    left: 5%;
+    bottom: -30px;
+  }
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
