--- a/src/app/components/css/steptoplay.css
+++ b/src/app/components/css/steptoplay.css
@@ -1,82 +1,118 @@
-
 /* section play steps */
 
 .play-steps {
-    width: 100%;
-    display: block;
-    padding-top: 6em;
-    padding-bottom: 4em;
-  }
-  
-  .play-step {
-    width: 85%;
-    margin: auto;
-    text-align: center;
-  }
-  
-  .play-step h2 {
-    font-family: "Raleway", sans-serif;
-    font-size: 49px;
-    font-weight: 700;
-    line-height: 58.8px;
-    color: var(--white);
-  }
-  .play-step h2 span {
-    color: var(--teal);
-  }
-  
+  width: 100%;
+  display: block;
+  padding-top: 6em;
+  padding-bottom: 4em;
+}
+
+.play-step {
+  width: 85%;
+  margin: auto;
+  text-align: center;
+}
+
+.play-step h2 {
+  font-family: "Raleway", sans-serif;
+  font-size: 49px;
+  font-weight: 700;
+  line-height: 58.8px;
+  color: var(--white);
+}
+.play-step h2 span {
+  color: var(--teal);
+}
+
+.play-step p {
+  color: var(--white);
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 24px;
+}
+.playstep-grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 33%);
+  justify-content: space-between;
+  margin-top: 2.2em;
+}
+
+.playstep-each {
+  box-shadow: 0px 0px 254.56px 0px #0000001a;
+  background: #191939;
+  display: block;
+  border-top: 3px solid var(--side-bar-popup);
+}
+.acpelty {
+  border-top: 3px solid #7841ee;
+}
+.psec {
+  height: 270px;
+  width: 75%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.psec img {
+  margin-bottom: 15px;
+}
+
+.psec h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 18.33px;
+  text-transform: uppercase;
+  padding-bottom: 10px;
+  color: var(--white);
+}
+.psec p {
+  font-family: "Jost", sans-serif;
+  font-size: 13.58px;
+  font-weight: 300;
+  line-height: 20.36px;
+  margin-top: 10px;
+}
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
   .play-step p {
-    color: var(--white);
-    font-family: "Roboto", sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 24px;
+    margin-bottom: 27px;
   }
   .playstep-grid {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 33%);
-    justify-content: space-between;
-    margin-top: 2.2em;
-  }
-  
-  .playstep-each {
-    box-shadow: 0px 0px 254.56px 0px #0000001a;
-    background: #191939;
-    display: block;
-    border-top: 3px solid var(--side-bar-popup);
-  }
-  .acpelty {
-    border-top: 3px solid #7841EE;
-    ;
+    display: flex;
+    flex-direction: column;
+    gap: 35px !important;
+    width: 80%;
+    margin: auto;
   }
   .psec {
-    height: 270px;
-    width: 75%;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .psec img {
-    margin-bottom: 15px;
-  }
-  
-  .psec h3 {
-    font-family: "Montserrat", sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 18.33px;
-    text-transform: uppercase;
-    padding-bottom: 10px;
-    color: var(--white);
+    height: fit-content;
+    padding-top: 20px;
+    padding-bottom: 38px;
   }
   .psec p {
-    font-family: "Jost", sans-serif;
-    font-size: 13.58px;
-    font-weight: 300;
-    line-height: 20.36px;
-    margin-top: 10px;
+    width: 80%;
+    margin: auto;
   }
-  
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
