--- a/src/app/components/css/testimonial.css
+++ b/src/app/components/css/testimonial.css
@@ -1,153 +1,180 @@
-
 /* testimonial section starts here */
 .testimonials {
-    display: block;
-    margin-bottom: 2em;
-    margin-top: 4em;
-  }
-  
-  .testimonial {
-    width: 85%;
-    margin: auto;
-    padding: 1em 0;
-  }
-  
-  .testimonial-body {
-    display: block;
-    text-align: center;
-  }
-  
-  .testimonial-body h2 {
-    font-family: "Raleway", sans-serif;
-    font-size: 49px;
-    font-weight: 700;
-    line-height: 58.8px;
-    margin-bottom: 0.25em;
-  }
-  
-  .testimonial-body p {
-    font-family: "Roboto" sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24px;
-  }
-  
+  display: block;
+  margin-bottom: 2em;
+  margin-top: 4em;
+}
+
+.testimonial {
+  width: 85%;
+  margin: auto;
+  padding: 1em 0;
+}
+
+.testimonial-body {
+  display: block;
+  text-align: center;
+}
+
+.testimonial-body h2 {
+  font-family: "Raleway", sans-serif;
+  font-size: 49px;
+  font-weight: 700;
+  line-height: 58.8px;
+  margin-bottom: 0.25em;
+}
+
+.testimonial-body p {
+  font-family: "Roboto" sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.testimonial-prove {
+  margin-top: 50px;
+}
+
+.testimonial-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  gap: 1em;
+}
+
+.testimonial-each {
+  padding: 30px 20px;
+  height: 380px;
+  border-radius: 15px;
+  background: #2c2852;
+  box-shadow: 0px 3.62px 3.62px 0px #0000000a;
+}
+
+.testimonial-each span {
+  text-align: center;
+  display: block;
+}
+
+.testimonial-each span img {
+  border-radius: 50%;
+}
+
+.testimonial-rating {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  height: 25px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.8em;
+  margin-top: 0.5em;
+}
+
+.testimonial-rating p {
+  color: #ffb84d;
+  font-family: "Exo", sans-serif;
+  font-size: 14.48px;
+  font-weight: 700;
+  line-height: 24.61px;
+}
+.testimonial-username {
+  font-family: "Archivo", sans-serif;
+  font-size: 13.61px;
+  font-weight: 400;
+  line-height: 21.53px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-white);
+  margin-bottom: 0.8em;
+}
+
+.testimonial-each span h3 {
+  font-family: "Exo", sans-serif;
+  font-size: 22.73px;
+  font-weight: 700;
+  line-height: 21.8px;
+  margin-bottom: 0.5em;
+}
+.testimonial-des {
+  font-family: "Jost", sans-serif;
+  font-size: 12.26px;
+  font-weight: 300;
+  line-height: 21.53px;
+}
+.testimonial-location {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.testimonial-location p {
+  font-family: "Archivo";
+  font-size: 12.67px;
+  font-weight: 600;
+  line-height: 21.53px;
+  color: #f0f4ff;
+}
+
+.testimonial-dots {
+  width: 100%;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.testimonial-dot {
+  width: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shjdshu343 {
+  background: #3e4117;
+  height: 13px;
+  width: 13px;
+  display: block;
+  border-radius: 50%;
+}
+
+.shjdshu766 {
+  height: 16px;
+  display: block;
+  width: 16px;
+  background-color: var(--bright-orange);
+  border-radius: 50%;
+}
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
   .testimonial-prove {
-    margin-top: 50px;
+    width: 80%;
+    margin: auto;
   }
-  
   .testimonial-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 33%);
-    gap: 1em;
-  }
-  
-  .testimonial-each {
-    padding: 30px 20px;
-    height: 380px;
-    border-radius: 15px;
-    background: #2c2852;
-    box-shadow: 0px 3.62px 3.62px 0px #0000000a;
-  }
-  
-  .testimonial-each span {
-    text-align: center;
-    display: block;
-  }
-  
-  .testimonial-each span img {
-    border-radius: 50%;
-  }
-  
-  .testimonial-rating {
     display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: 25px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0.8em;
-    margin-top: 0.5em;
+    flex-direction: column;
+    gap: 40px !important;
   }
-  
-  .testimonial-rating p {
-    color: #ffb84d;
-    font-family: "Exo", sans-serif;
-    font-size: 14.48px;
-    font-weight: 700;
-    line-height: 24.61px;
-  }
-  .testimonial-username {
-    font-family: "Archivo", sans-serif;
-    font-size: 13.61px;
-    font-weight: 400;
-    line-height: 21.53px;
-    letter-spacing: 0.02em;
-    color: var(--secondary-white);
-    margin-bottom: 0.8em;
-  }
-  
-  .testimonial-each span h3 {
-    font-family: "Exo", sans-serif;
-    font-size: 22.73px;
-    font-weight: 700;
-    line-height: 21.8px;
-    margin-bottom: 0.5em;
-  }
-  .testimonial-des {
-    font-family: "Jost", sans-serif;
-    font-size: 12.26px;
-    font-weight: 300;
-    line-height: 21.53px;
-  }
-  .testimonial-location {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: 25px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1em;
-  }
-  
-  .testimonial-location p {
-    font-family: "Archivo";
-    font-size: 12.67px;
-    font-weight: 600;
-    line-height: 21.53px;
-    color: #f0f4ff;
-  }
-  
-  .testimonial-dots {
-    width: 100%;
-    height: 18px;
-    display: flex;
-    justify-content: center;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  
-  .testimonial-dot {
-    width: 80px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .shjdshu343 {
-    background: #3e4117;
-    height: 13px;
-    width: 13px;
-    display: block;
-    border-radius: 50%;
-  }
-  
-  .shjdshu766 {
-    height: 16px;
-    display: block;
-    width: 16px;
-    background-color: var(--bright-orange);
-    border-radius: 50%;
-  }
-  
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+}
