--- a/src/app/game/[sport]/sport5666.css
+++ b/src/app/game/[sport]/sport5666.css
@@ -1,6 +1,5 @@
-
-  .hkik-oddline-econt {
-    justify-content: space-between !important;
+.hkik-oddline-econt {
+  justify-content: space-between !important;
 }
 
 .lst_two {
@@ -9,4 +8,30 @@
 
 .lst_one {
   flex: 0.5 !important;
+}
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .hkik-oddline-econt-left {
+    align-items: flex-start !important;
+  }
+  .lst_two {
+    flex: 0.25 !important;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
 }
