--- a/src/app/profile/profilelayout.css
+++ b/src/app/profile/profilelayout.css
@@ -18,13 +18,36 @@
 }
 
 .kik-profile-menu span {
-    position: relative;
+  position: relative;
 }
 
 .kikpfemn {
-    position: absolute;
-    bottom: -5px;
-    width: 100%;
-    height: 3px;
-    background: linear-gradient(90deg, red, green, blue, orange, yellow);
+  position: absolute;
+  bottom: -5px;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(90deg, red, green, blue, orange, yellow);
+}
+
+/* Extra Small Devices (Phones) */
+@media (max-width: 576px) {
+  .kik-profile-menu {
+    flex-wrap: wrap;
+  }
+}
+
+/* Small Devices (Tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+}
+
+/* Medium Devices (Tablets in Landscape, Small Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
 }
