--- a/src/app/components/odd/css/oddOutcome.css
+++ b/src/app/components/odd/css/oddOutcome.css
@@ -45,8 +45,8 @@
     gap: 10px !important;
   }
   .hag-odd-each {
-    width: 70px !important;
-    height: 70px;
+    width: 60px !important;
+    height: 60px;
   }
   .hag-odd-each div {
     gap: 5px;
@@ -59,7 +59,10 @@
   .hag-odd-each div span {
     font-size: 16px;
   }
-  
+  .home-all-gmeachs {
+    width: 320px !important;
+  }
+ 
 }
 
 /* Small Devices (Tablets) */
